[package]
name = "i2pd-exporter"
version = "2.2.0"
edition = "2021"
authors = ["The i2pd-exporter Contributors"]
description = "Prometheus exporter for i2pd (C++ via I2PControl). Not for Java I2P."
license = "MIT"
repository = "https://github.com/Jercik/i2pd-exporter"
keywords = ["i2p", "i2pd", "prometheus", "exporter", "monitoring"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "signal"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4"
env_logger = "0.11"
log = "0.4"
warp = { version = "0.4", features = ["server"] }
clap = { version = "4.5", features = ["derive", "env"] } # For CLI argument parsing (--version flag) and env vars
prometheus-client = "0.24"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 'z'      # Optimize for size
lto = true           # Enable link-time optimization
codegen-units = 1    # Reduce parallel code generation units for better optimization
panic = 'abort'      # Abort on panic for smaller binary size
strip = true         # Strip symbols from binary

 
